--- a/polls/templates/polls/passed.html
+++ b/polls/templates/polls/passed.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'polls/base.html' %}
+{% block header %}
+    <h5 class="my-0 mr-md-auto font-weight-normal" href="">Опросы</h5>
+{% endblock %}
+{% block main_content %}
+
+<h5 class="my-0 mr-md-auto font-weight-normal">Данный опрос пройден, выберите другой</h5><br>
+
+{% if all_polls %}
+
+    {% for poll in all_polls %}
+
+        <a class="btn btn-outline-primary" href="{% url 'polls:detail' poll.id %}"><b>{{poll.poll_title}}</b></a>
+
+    {% endfor %}
+
+{% else %}
+    <p>Нет ни одного опроса, создайте его</p>
+{% endif %}
+
+{% endblock %}
