--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -8,9 +8,8 @@
 {% block main_content %}
 
 {% if all_polls %}
-
     {% for poll in all_polls %}
-        {% if user_name in poll.users %}
+        {% if poll.userresponses_set.all.count == poll.question_set.all.count %}
             <a class="btn btn-outline-primary" href="{% url 'polls:detail' poll.id %}"><b>{{poll.poll_title}}<br>Пройден</b></a>
         {% else %}
             <a class="btn btn-outline-primary" href="{% url 'polls:detail' poll.id %}"><b>{{poll.poll_title}}</b></a>
